# NeuroSim

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_and_setup.py
docs/: Doxyfile.in
examples/: NeuroSim_Demo.ipynb
src/: Constants.h  ControlPanelWidget.cpp  ControlPanelWidget.h  HeatmapWidget.cpp  HeatmapWidget.h  ITraceRenderer.h  ITracerRenderer.cpp  IntegrateAndFireNeuron.cpp  IntegrateAndFireNeuron.h  IzhikevichNeuron.cpp  IzhikevichNeuron.h  MainWindow.cpp  MainWindow.h  Neuron.cpp  Neuron.h  OpenGLWidget.cpp  OpenGLWidget.h  RasterPlotWidget.cpp  RasterPlotWidget.h  Simulation.cpp  Simulation.h  Synapse.cpp  Synapse.h  TraceViewWidget.cpp  TraceViewWidget.h  VoltageTraceRenderer.cpp  VoltageTraceRenderer.h  bindings.cpp  main.cpp
tests/: test_controlpanelwidget.cpp  test_heatmapwidget.cpp  test_mainwindow.cpp  test_neuron.cpp  test_rasterplotwidget.cpp  test_simulation.cpp  test_synapse.cpp  test_traceviewwidget.cpp
